updated hover colours to match colour scheme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -606,7 +606,7 @@ label {
 }
 
 .fa-github:hover {
-  color: #98ded9;
+  color: #b983ff;
 }
 
 .diagram {
@@ -697,7 +697,7 @@ ul.team-member-icons li {
 }
 
 .team-member-icon:hover {
-  color: #98ded9;
+  color: #b983ff;
 }
 
 h1 {
