--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,7 +579,7 @@ label {
 }*/
 
 #spin {
-  background-image: linear-gradient(111deg, #161d6f, #b983ff;);
+  background-image: linear-gradient(111deg, #081b53, #b983ff;);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -670,7 +670,7 @@ label {
 
 .team-member-name {
   margin-bottom: 10px;
-  color: #161d6f;
+  color: #081b53;
   font-size: 18px;
   font-weight: 500;
   text-align: center;
@@ -693,7 +693,7 @@ ul.team-member-icons li {
 
 .team-member-icon {
   margin: 0px 5px;
-  color: #161d6f;
+  color: #081b53;
 }
 
 .team-member-icon:hover {
@@ -702,7 +702,7 @@ ul.team-member-icons li {
 
 h1 {
   font-family: Inter, sans-serif;
-  color: #161d6f;
+  color: #081b53;
   font-size: 64px;
   font-weight: 700;
   letter-spacing: -0.04em;
@@ -712,7 +712,7 @@ h2 {
   margin-top: 20px;
   margin-bottom: 10px;
   font-family: Inter, sans-serif;
-  color: #161d6f;
+  color: #081b53;
   font-size: 48px;
   line-height: 1.2;
   font-weight: 700;
@@ -722,7 +722,7 @@ h2 {
 h3 {
   margin-top: 20px;
   margin-bottom: 10px;
-  color: #161d6f;
+  color: #081b53;
   font-size: 36px;
   line-height: 1.3;
   font-weight: 700;
@@ -731,7 +731,7 @@ h3 {
 h4 {
   margin-top: 10px;
   margin-bottom: 10px;
-  color: #161d6f;
+  color: #081b53;
   font-size: 30px;
   line-height: 1.4;
   font-weight: 700;
@@ -740,7 +740,7 @@ h4 {
 h5 {
   margin-top: 10px;
   margin-bottom: 10px;
-  color: #161d6f;
+  color: #081b53;
   font-size: 24px;
   line-height: 1.4;
   font-weight: 700;
@@ -749,7 +749,7 @@ h5 {
 h6 {
   margin-top: 10px;
   margin-bottom: 10px;
-  color: #161d6f;
+  color: #081b53;
   font-size: 15px;
   line-height: 1;
   font-weight: 700;
@@ -779,7 +779,7 @@ blockquote {
 
 a {
   font-family: Inter, sans-serif;
-  color: #161d6f;
+  color: #081b53;
   /*  font-size: 20px;*/
   line-height: 1.3;
   /*  font-weight: 500;*/
@@ -787,7 +787,7 @@ a {
 }
 
 a:hover {
-  color: #98ded9;
+  color: #b983ff;
 }
 
 .section {
@@ -877,7 +877,7 @@ a:hover {
   -ms-flex-align: center;
   align-items: center;
   border-radius: 25px;
-  background-image: linear-gradient(111deg, #161d6f, #98ded9);
+  background-image: linear-gradient(111deg, #081b53, #98ded9);
 }
 
 .black-h2 {
@@ -1169,7 +1169,7 @@ a:hover {
   -ms-flex-align: center;
   align-items: center;
   border-radius: 100px;
-  background-color: #161d6f;
+  background-color: #081b53;
   color: #fff;
   font-size: 16px;
   text-decoration: none;
@@ -1188,7 +1188,7 @@ a:hover {
 }
 
 .primary-button:hover {
-  background-image: linear-gradient(111deg, #161d6f, #98ded9);
+  background-image: linear-gradient(111deg, #081b53, #b983ff);
 }
 
 .button-container {
@@ -1327,14 +1327,14 @@ a:hover {
   padding: 20px 12px;
   -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
-  color: #161d6f;
+  color: #081b53;
   font-size: 15px;
   font-weight: 500;
   text-decoration: none;
 }
 
 .link-block:hover {
-  color: #98ded9;
+  color: #b983ff;
 }
 
 .navigation-container {
