added landing page video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1945,3 +1945,17 @@ a:hover {
 .bold {
   font-weight: bold;
 }
+
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
