minor landing page adjustments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1290,6 +1290,7 @@ a:hover {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  white-space: nowrap;
 }
 
 ._404-text {
