--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ html {
 
 body {
   margin: 0;
-  background-color: #fff;
+  background-color: #f5f5f5;
   font-family: 'Roboto', sans-serif;
   color: #b5bbbf;
    font-size: 14px;
@@ -299,7 +299,11 @@ label {
 .case-study-image {
   margin: 40px auto;
   display: block;
-  width: 70%;
+  width: 100%;
+}
+
+.case-study-image-smaller {
+  width: 50%;
 }
 
 .demo {
