--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,9 @@ html {
 
 body {
   margin: 0;
-  background-color: #fff;
+  background-color: #f5f5f5;
   font-family: 'Roboto', sans-serif;
-  color: #b5bbbf;
+  color: #a7aeb3;
    font-size: 14px;
   line-height: 20px;
   margin: 0;
