--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,13 +297,20 @@ label {
 }
 
 .case-study-image {
-  margin: 40px auto;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
   display: block;
   width: 100%;
 }
 
-.case-study-image-smaller {
+.small {
   width: 50%;
+}
+
+.medium {
+  width: 80%;
 }
 
 .demo {
