added color favicon, updated team and added bold highlight to table of contents

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1951,6 +1951,7 @@ a:hover {
   font-weight: bold;
 }
 
+/* HORUS ADDITIONS */ 
 .iframe-container{
   position: relative;
   width: 100%;
@@ -1964,4 +1965,8 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.toc-active {
+  font-weight: bold;
 }
