--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,10 @@ a {
   background-color: transparent;
 }
 
-a:active,
+a:active {
+
+}
+
 a:hover {
   outline: 0;
 }
@@ -1974,6 +1977,6 @@ a:hover {
   height: 100%;
 }
 
-.toc-active {
+/* .toc-active {
   font-weight: bold;
-}
+} */
