added references to case study

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1988,3 +1988,13 @@ code {
 .is-active-li {
   font-weight: bold;
 }
+
+.reference {
+  color: #b5bbbf;
+  font-style: italic;
+  padding-top: 30px;
+}
+
+sup {
+  color: #b983ff;
+}
