--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,10 @@ button::-moz-focus-inner {
 
 figure {
   text-align: center;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
+
 figcaption {
   text-align: center;
 }
@@ -175,6 +178,8 @@ img {
   max-width: 100%;
   vertical-align: middle;
   display: inline-block;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 html.w-mod-touch * {
@@ -356,7 +361,7 @@ label {
   }
 
   .case-study-image {
-    width: 80%;
+    width: 100%;
     margin: 0px auto;
   }
 }
