--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,8 @@ figure {
 
 figcaption {
   text-align: center;
+  margin-top: 10px;
+  font-style: italic;
 }
 
 #sidebar {
@@ -1813,15 +1815,15 @@ a:hover {
   }
 
   p {
-    font-size: 15px;
+    font-size: 16px;
   }
 
   li {
-    font-size: 15px;
+    font-size: 16px;
   }
 
   blockquote {
-    font-size: 15px;
+    font-size: 16px;
   }
 
   .white-h2 {
@@ -1868,16 +1870,16 @@ a:hover {
     font-size: 18px;
   }
   p {
-    font-size: 13px;
+    font-size: 16px;
   }
   li {
-    font-size: 13px;
+    font-size: 16px;
   }
   blockquote {
-    font-size: 13px;
+    font-size: 16px;
   }
   a {
-    font-size: 15px;
+    font-size: 16px;
   }
   .section {
     padding-top: 45px;
